--- a/next13/package.json
+++ b/next13/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radarnaval",
+  "name": "next13",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,18 +14,9 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "gray-matter": "^4.0.3",
-    "markdown-to-jsx": "^7.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.2",
     "typescript": "5.0.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
   }
 }
