--- a/radarnaval/package.json
+++ b/radarnaval/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "contentlayer": "^0.3.1",
+    "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.2.0",
     "next": "13.2.4",
+    "next-contentlayer": "^0.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
